# lc-graph

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  TODO.md  __init__.py  evaluador-lc-plan.md  evaluador-lc.html  models.py  pipeline.py  prompts.py  pyproject.toml  pytest.ini
docs/: cdti-pitch.html  cdti-pitch.pptx  index.html  walkthrough.md
docs/plans/: 2026-03-10-linkedin-polish-design.md  2026-03-10-linkedin-polish-impl.md
docs/superpowers/plans/: 2026-03-11-fastapi-mcp.md  2026-03-11-hide-prompts.md  2026-03-12-langsmith-observability.md  2026-03-13-evals-phase1.md
docs/superpowers/specs/: 2026-03-11-fastapi-mcp-design.md  2026-03-11-hide-prompts-design.md  2026-03-12-langsmith-observability-design.md
evals/: conftest.py  test_clasificador.py
evals/datasets/golden/: resolucion_01.txt  resolucion_01_meta.json
evaluador_lc/: api.py  main.py  mcp_server.py  pipeline.py  prompts.py.example
tests/: test_api.py  test_mcp_server.py  test_pipeline_helpers.py  test_pipeline_import_guard.py  test_scoring.py
