[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "evaluador-lc"
version = "0.1.0"
description = "LangGraph multi-agent pipeline for plain-language evaluation of Spanish administrative documents"
requires-python = ">=3.9"
dependencies = [
    "langchain-anthropic",
    "langgraph",
    "pydantic",
]

[project.urls]
Homepage = "https://github.com/rubendelafuente/lc-graph"
"Live Demo" = "https://rubendelafuente.github.io/lc-graph/"
